[package]
name = "yew-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
weblog = "0.3.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
web-sys = "0.3.64"
yew = { version = "0.20", features = ["csr"] }
gloo = "0.9.0"